2006-07-09  Brian Bidulock  <bidulock@openss7.org>

	* TODO: added todo items for sk_buff handling
	* README: updated quick installation instructions

2006-07-08  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: bumped version to release candidate 2
	* NEWS: bumped version to release candidate 2
	* debian/changelog: bumped version to release candidate 2
	* debian/rules.in: clean deb package master build
	* src/modules/sth.c: handle old SLES 9 2.6.5 kernel

2006-07-07  Brian Bidulock  <bidulock@openss7.org>

	* debian/copyright: typo

2006-07-06  Brian Bidulock  <bidulock@openss7.org>

	* debian/changelog: packaged release candidate for Mark Fugate
	* debian/control.in: first full debian master package build of debs on Ubuntu
	* debian/rules.in:: first full debian master package build of debs on Ubuntu

2006-07-05  Brian Bidulock  <bidulock@openss7.org>

	* NEWS: package release candidate for Mark Fugate
	* .pkgrelease: package release candidate for Mark Fugate
	* BUGS: added bug file for bug encountered while testing release
	  candidate

2006-07-04  Brian Bidulock  <bidulock@openss7.org>

	* streams.spec.in: place all include files in development sub-package

2006-07-03  Brian Bidulock  <bidulock@openss7.org>

	* README: updated for release
	* README-alpha: updated for release
	* README-cvs: updated for release
	* README-nexusware: updated for release
	* acinclude.m4: updated for release
	* doc/manual/install.texi: updated for release
	* doc/manual/releases.texi: updated for release
	* src/kernel/strattach.c: namespace_sem
	  - I don't know why only Ubuntu 6.06 caught this error

2006-07-02  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/releases.texi: updates for release

2006-07-01  Brian Bidulock  <bidulock@openss7.org>
	
	* Makefile.am: changed to new KBUILD_STR build flags
	* src/kernel/strsched.c: 2.6.17 has no SLAB_NO_REAP flag
	* src/kernel/strspecfs.c: 2.6.17 has const f_op pointer
	* debian/changelog: changes for Ubuntu dpkg build