@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $Id: strsubr.h,v 0.9.2.69 2006/05/29 08:52:58 brian Exp $
+ @(#) $Id: strsubr.h,v 0.9.2.70 2006/07/10 08:51:04 brian Exp $
 
  -----------------------------------------------------------------------------
 
@@ -44,11 +44,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2006/05/29 08:52:58 $ by $Author: brian $
+ Last Modified $Date: 2006/07/10 08:51:04 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: strsubr.h,v $
+ Revision 0.9.2.70  2006/07/10 08:51:04  brian
+ - fix for rwlock_t held across schedule detected by FC5 2.6.17 kernel
+
  Revision 0.9.2.69  2006/05/29 08:52:58  brian
  - started zero copy architecture
 
@@ -66,7 +69,7 @@
 #ifndef __SYS_STREAMS_STRSUBR_H__
 #define __SYS_STREAMS_STRSUBR_H__
 
-#ident "@(#) $RCSfile: strsubr.h,v $ $Name:  $($Revision: 0.9.2.69 $) Copyright (c) 2001-2006 OpenSS7 Corporation."
+#ident "@(#) $RCSfile: strsubr.h,v $ $Name:  $($Revision: 0.9.2.70 $) Copyright (c) 2001-2006 OpenSS7 Corporation."
 
 #ifndef __SYS_STRSUBR_H__
 #warning "Do no include sys/streams/strsubr.h directly, include sys/strsubr.h instead."
