@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $Id: strlookup.h,v 0.9.2.13 2005/12/19 12:45:16 brian Exp $
+ @(#) $Id: strlookup.h,v 0.9.2.14 2006/07/10 08:51:05 brian Exp $
 
  -----------------------------------------------------------------------------
 
@@ -45,7 +45,7 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2005/12/19 12:45:16 $ by $Author: brian $
+ Last Modified $Date: 2006/07/10 08:51:05 $ by $Author: brian $
 
  *****************************************************************************/
 
