@@ -1,3 +1,11 @@
+2006-07-10  Brian Bidulock  <bidulock@openss7.org>
+
+	* include/sys/streams/strsubr.h: fix for rwlock_t held across schedule on FC5 2.6.17 kernel
+	* src/kernel/strlookup.c: fix for rwlock_t held across schedule on FC5 2.6.17 kernel
+	* src/kernel/strlookup.h: fix for rwlock_t held across schedule on FC5 2.6.17 kernel
+	* src/kernel/strreg.c: fix for rwlock_t held across schedule on FC5 2.6.17 kernel
+	- tested on git branch cdevsw_changes3
+
 2006-07-09  Brian Bidulock  <bidulock@openss7.org>
 
 	* TODO: added todo items for sk_buff handling
